--- a/toolkit/themes/shared/arrowscrollbox.css
+++ b/toolkit/themes/shared/arrowscrollbox.css
@@ -13,7 +13,7 @@
 /* Scroll arrows */
 
 toolbarbutton {
-  color: inherit !important; /* override any color changes for toolbar buttons in e.g. disabled or hover states */
+  color: inherit;
   list-style-image: url("chrome://global/skin/icons/arrow-down-12.svg");
   -moz-context-properties: fill, fill-opacity;
   fill: currentColor;
@@ -22,7 +22,7 @@ toolbarbutton {
 }
 
 toolbarbutton[disabled="true"] {
-  fill-opacity: 0.4;
+  fill-opacity: var(--toolbarbutton-disabled-opacity);
 }
 
 :host([orient="horizontal"]) > toolbarbutton {
